Update for alpha release